--- a/src/lib/Kanadzuchi/Mail/Group/CN/Makefile.am
+++ b/src/lib/Kanadzuchi/Mail/Group/CN/Makefile.am
@@ -1,11 +1,11 @@
-# $Id: Makefile.am,v 1.1.2.1 2011/03/09 06:37:25 ak Exp $
+# $Id: Makefile.am,v 1.1.2.2 2013/04/18 10:56:28 ak Exp $
 # Copyright (C) 2009-2011 Cubicroot Co. Ltd.
 # This is the auto-Makefile for bounceHammer/src/lib/Kanadzuchi/Mail/Group/CN,
 # is processed by automake to create Makefile.in.
 
 distdir = $(BUILDROOT)/dist/lib/Kanadzuchi/Mail/Group/CN
 pkgdatadir = @libdir@/Kanadzuchi/Mail/Group/CN
-pkgdata_DATA = Smartphone.pm WebMail.pm
+pkgdata_DATA = Cellphone.pm Smartphone.pm WebMail.pm
 
 all-am:
 	test -d $(distdir) || mkdir -p $(distdir)
