--- a/src/lib/Kanadzuchi/Mail/Group/CZ/Makefile.in
+++ b/src/lib/Kanadzuchi/Mail/Group/CZ/Makefile.in
@@ -14,8 +14,8 @@
 
 @SET_MAKE@
 
-# $Id: Makefile.am,v 1.1.2.2 2011/03/10 05:56:52 ak Exp $
-# Copyright (C) 2009-2011 Cubicroot Co. Ltd.
+# $Id: Makefile.am,v 1.1.2.3 2013/04/18 10:56:28 ak Exp $
+# Copyright (C) 2009-2011,2013 Cubicroot Co. Ltd.
 # This is the auto-Makefile for bounceHammer/src/lib/Kanadzuchi/Mail/Group/CZ,
 # is processed by automake to create Makefile.in.
 
@@ -155,7 +155,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 distdir = $(BUILDROOT)/dist/lib/Kanadzuchi/Mail/Group/CZ
-pkgdata_DATA = Smartphone.pm WebMail.pm
+pkgdata_DATA = Cellphone.pm Smartphone.pm WebMail.pm
 all: all-am
 
 .SUFFIXES:
