--- a/src/lib/Kanadzuchi/Mail/Why/Makefile.in
+++ b/src/lib/Kanadzuchi/Mail/Why/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# $Id: Makefile.am,v 1.4.2.2 2011/06/20 03:43:40 ak Exp $
+# $Id: Makefile.am,v 1.4.2.3 2013/07/17 04:12:24 ak Exp $
 # Copyright (C) 2009,2010 Cubicroot Co. Ltd.
 # This is the auto-Makefile for bounceHammer/src/lib/Kanadzuchi/Mail/Why,
 # is processed by automake to create Makefile.in.
@@ -157,7 +157,7 @@ top_srcdir = @top_srcdir@
 distdir = $(BUILDROOT)/dist/lib/Kanadzuchi/Mail/Why
 pkgdata_DATA = ExceedLimit.pm Filtered.pm HostUnknown.pm MailboxFull.pm \
 		RelayingDenied.pm SystemFull.pm MesgTooBig.pm \
-		UserUnknown.pm Rejected.pm SecurityError.pm \
+		UserUnknown.pm Rejected.pm Suspend.pm SecurityError.pm \
 		SystemError.pm ContentError.pm NotAccept.pm \
 		MailerError.pm Expired.pm
 
